--- a/iweather/iweather/MVC/CellHome/MyCellWeather.xib
+++ b/iweather/iweather/MVC/CellHome/MyCellWeather.xib
@@ -10,18 +10,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCellWeather" rowHeight="86" id="KGk-i7-Jjw" customClass="MyCellWeather" customModule="iweather" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="421" height="86"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCellWeather" rowHeight="100" id="KGk-i7-Jjw" customClass="MyCellWeather" customModule="iweather" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="421" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="421" height="86"/>
+                <rect key="frame" x="0.0" y="0.0" width="421" height="99.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="USd-2S-RF2">
-                        <rect key="frame" x="0.0" y="0.0" width="421" height="86"/>
+                        <rect key="frame" x="0.0" y="0.0" width="421" height="99.5"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12c-a1-BDI">
-                        <rect key="frame" x="5" y="37" width="52.5" height="33.5"/>
+                        <rect key="frame" x="5" y="53" width="52.5" height="33.5"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -46,7 +46,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v7E-g0-A0I">
-                        <rect key="frame" x="347" y="0.0" width="60" height="85.5"/>
+                        <rect key="frame" x="347" y="0.0" width="60" height="91.5"/>
                         <color key="backgroundColor" red="0.88873751300000003" green="0.074391752429999999" blue="0.094870127959999995" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="eQt-YN-X2x"/>
@@ -70,6 +70,13 @@
                             <constraint firstAttribute="height" constant="15" id="mSj-wp-ybZ"/>
                         </constraints>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FaH-fI-0Rd">
+                        <rect key="frame" x="0.0" y="91.5" width="421" height="8"/>
+                        <color key="backgroundColor" red="0.015686274510000001" green="0.10980392160000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="8" id="uAR-j0-isS"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" red="0.12076002700000001" green="1" blue="0.11501029309999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
@@ -77,21 +84,24 @@
                     <constraint firstItem="aMU-XC-JVB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="5Y6-bQ-UmK"/>
                     <constraint firstItem="USd-2S-RF2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="CWb-7v-vx8"/>
                     <constraint firstAttribute="trailing" secondItem="3Qv-yc-I2o" secondAttribute="trailing" constant="5" id="MBI-YC-Cl4"/>
-                    <constraint firstAttribute="bottom" secondItem="v7E-g0-A0I" secondAttribute="bottom" id="RLS-ck-UiR"/>
+                    <constraint firstAttribute="bottom" secondItem="v7E-g0-A0I" secondAttribute="bottom" constant="8" id="RLS-ck-UiR"/>
                     <constraint firstAttribute="trailing" secondItem="USd-2S-RF2" secondAttribute="trailing" id="Sn3-g6-ALB"/>
-                    <constraint firstAttribute="bottom" secondItem="12c-a1-BDI" secondAttribute="bottom" constant="15" id="SuQ-vl-fHG"/>
                     <constraint firstItem="a0d-OS-OFM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="XeC-dH-YLC"/>
                     <constraint firstItem="3Qv-yc-I2o" firstAttribute="leading" secondItem="v7E-g0-A0I" secondAttribute="trailing" id="XtI-ix-5KF"/>
+                    <constraint firstItem="FaH-fI-0Rd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Yv6-Lq-uUj"/>
+                    <constraint firstAttribute="trailing" secondItem="FaH-fI-0Rd" secondAttribute="trailing" id="Yy5-Uv-A0y"/>
                     <constraint firstAttribute="bottom" secondItem="USd-2S-RF2" secondAttribute="bottom" id="ZEA-Uj-bAZ"/>
                     <constraint firstItem="V5C-aJ-09Z" firstAttribute="leading" secondItem="kfw-vj-8Dm" secondAttribute="trailing" constant="10" id="cKf-Vq-HxW"/>
                     <constraint firstItem="kfw-vj-8Dm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="cpq-JQ-1h1"/>
                     <constraint firstItem="12c-a1-BDI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="f1K-oP-cVc"/>
                     <constraint firstItem="V5C-aJ-09Z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="gV1-hK-4mf"/>
                     <constraint firstItem="v7E-g0-A0I" firstAttribute="leading" secondItem="a0d-OS-OFM" secondAttribute="trailing" id="ipr-mt-PME"/>
+                    <constraint firstAttribute="bottom" secondItem="FaH-fI-0Rd" secondAttribute="bottom" id="mTi-wJ-Wnl"/>
                     <constraint firstItem="v7E-g0-A0I" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="orZ-WC-ukY"/>
                     <constraint firstItem="3Qv-yc-I2o" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="p8h-cq-UnK"/>
                     <constraint firstItem="USd-2S-RF2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="rq2-ni-ATF"/>
                     <constraint firstItem="kfw-vj-8Dm" firstAttribute="leading" secondItem="aMU-XC-JVB" secondAttribute="trailing" constant="5" id="tYw-x4-3aA"/>
+                    <constraint firstItem="FaH-fI-0Rd" firstAttribute="top" secondItem="12c-a1-BDI" secondAttribute="bottom" constant="5" id="xqK-xz-uFb"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -103,7 +113,7 @@
                 <outlet property="lblTemperature" destination="v7E-g0-A0I" id="kla-hT-PJz"/>
                 <outlet property="lblTime" destination="kfw-vj-8Dm" id="2oj-Zx-L88"/>
             </connections>
-            <point key="canvasLocation" x="13.5" y="-67"/>
+            <point key="canvasLocation" x="-93.5" y="-200"/>
         </tableViewCell>
     </objects>
 </document>
